--- a/MathServiceLibrary/App.config
+++ b/MathServiceLibrary/App.config
@@ -7,39 +7,24 @@
   <!-- 部署服务库项目时，必须将配置文件的内容添加到
  主机的 app.config 文件中。System.Configuration 不支持库的配置文件。 -->
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="myCustomHttpBinding"
-                 openTimeout="00:00:30"/>
-      </basicHttpBinding>
-    </bindings>
-    
     <services>
-      <service name="WcfServiceLibrary_Test.MagicEightBallService"
-               behaviorConfiguration="EightBallServiceMEXBehavior">
-        <endpoint address=""
-                  binding="basicHttpBinding"
-                  bindingConfiguration="myCustomHttpBinding"
-                  contract="WcfServiceLibrary_Test.IEightBall">
+      <service name="MathServiceLibrary.MathService">
+        <endpoint address="" binding="basicHttpBinding" contract="MathServiceLibrary.IBasicMath">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <!--启用MEX终结点-->
-        <endpoint address="mex"
-                  binding="mexHttpBinding" contract="WcfServiceLibrary_Test.IEightBall">
-        </endpoint>
-        <!--<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />-->
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/MagicEightBallService" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/MathServiceLibrary/Service1/" />
           </baseAddresses>
         </host>
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior name="EightBallServiceMEXBehavior">
+        <behavior>
           <!-- 为避免泄漏元数据信息，
           请在部署前将以下值设置为 false -->
           <serviceMetadata httpGetEnabled="True"/>
